--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.3"
+    "survey-core": "^1.12.16-patch.1",
+    "survey-react-ui": "^1.12.16-patch.1"
   },
   "devDependencies": {
     "postcss": "^8",
